# torasu-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  format.sh  lint.sh  setup.sh  test.sh
.ci/: Jenkinsfile  cpplintfilter.txt  formatflags.txt  sourcelist.txt
.ci/Dockerfiles/: analysis  build  cpplint
.githooks/: pre-commit
core/: .gitignore  CMakeLists.txt
core/include/torasu/: DataPackable.h  DataPackable.hpp  Dlog_entry.hpp  RenderableProperties.hpp  SimpleRenderable.hpp  log_tools.hpp  render_tools.hpp  slot_tools.hpp  tools.hpp  torasu.hpp
core/src/: DataPackable.cpp  Dlog_entry.cpp  RenderTools.cpp  SimpleRenderable.cpp  render_tools.cpp  torasu-core-index.cpp  torasu-cpp-core.cpp  torasu.h
docs/drafts/: torasu-versioning.md
examples/: .gitignore  CMakeLists.txt  build.sh  torasu-cpp-examples.cpp
examples/boilerplate/: Dboilerplate.cpp  Dboilerplate.hpp  Rboilerplate.cpp  Rboilerplate.hpp  execution-boilerplate.cpp  execution-boilerplate.hpp
examples/src/: task-distribution-test.cpp  task-distribution-test.hpp  torasu-cpp-examples.cpp
examples/test/: torasu-cpp-test.cpp
lib/include/torasu/: json.hpp
lib/include/torasu/lib/: nlohmann
std/: CMakeLists.txt
std/include/torasu/std/: DPNum.hpp  DPString.hpp  DRBImg.hpp  Daudio_buffer.hpp  Dbimg.hpp  Dbimg_sequence.hpp  Dfile.hpp  Dmatrix.hpp  Dnum.hpp  Dstring.hpp  Dstring_map.hpp  Dstring_pair.hpp  EICoreRunner.hpp  EIcore_runner.hpp  LIcore_logger.hpp  RMultiply.hpp  RNum.hpp  Radd.hpp  Rdivide.hpp  Rerror.hpp  Rfallback.hpp  Rfloor_mod.hpp  Rjson_prop.hpp  Rlist.hpp  Rlocal_file.hpp  Rlog_message.hpp  Rmatrix.hpp  Rmix_pipelines.hpp  Rmod_rctx.hpp  Rmultiply.hpp  Rnet_file.hpp  Rnum.hpp  Rnumber_string.hpp  Rproperty.hpp  Rrctx_value.hpp  Rsin.hpp  Rstring.hpp  Rstring_concat.hpp  Rstring_file.hpp  Rstring_map.hpp  (+12 more)
std/src/: DPNum.cpp  DPString.cpp  DRBImg.cpp  Daudio_buffer.cpp  Dbimg.cpp  Dbimg_sequence.cpp  Dfile.cpp  Dmatrix.cpp  Dnum.cpp  Dstring.cpp  Dstring_map.cpp  Dstring_pair.cpp  EICoreRunner.cpp  EIcore_runner.cpp  LIcore_logger.cpp  RMultiply.cpp  RNum.cpp  Radd.cpp  Rdivide.cpp  Rerror.cpp  Rfallback.cpp  Rfloor_mod.cpp  Rjson_prop.cpp  Rlist.cpp  Rlocal_file.cpp  Rlog_message.cpp  Rmatrix.cpp  Rmix_pipelines.cpp  Rmod_rctx.cpp  Rmultiply.cpp  Rnet_file.cpp  Rnum.cpp  Rnumber_string.cpp  Rproperty.cpp  Rrctx_value.cpp  Rsin.cpp  Rstring.cpp  Rstring_concat.cpp  Rstring_file.cpp  Rstring_map.cpp  (+4 more)
